--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -21,6 +21,24 @@ body {
     justify-content: flex-start;
 }
 
+.big {
+    flex: 1;
+}
+
+.common-input {
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    appearance: none;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
 .content-container-wrapper {
     align-items: center;
     display: flex;
