--- a/src/main/resources/static/css/user/join.css
+++ b/src/main/resources/static/css/user/join.css
@@ -1,13 +1,40 @@
 .title {
-    text-align: center;
     font-size: 2.25rem;
     font-weight: 500;
 }
 
-#main {
+#main > .content-container {
     margin: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-form {
+#joinForm {
+    width: 500px;
     margin-top: 5rem;
+    margin-bottom: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+#joinForm div {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+#joinForm div > span {
+    display: flex;
+}
+
+#joinForm div > span button {
+    margin-left: 0.5rem;
+}
+
+.search_addr_btn {
+    margin-top: 2rem;
 }
