--- a/src/main/resources/templates/user/findId.html
+++ b/src/main/resources/templates/user/findId.html
@@ -20,28 +20,35 @@
 </head>
 <body>
 
+<header id="header" class="content-container-wrapper">
+    <th:block th:insert="~{fragments/header.html :: header_fragment}"></th:block>
+</header>
+
 <main id="main" class="content-container-wrapper">
     <div class="content-container">
-        <div>
-            <label>이름</label> <br/>
-            <input name="name" id="name" placeholder="이름"> <br/>
-        </div>
-        <div>
-            <label>이메일</label> <span id="email_msg"></span> <br/>
-            <input name="email" id="email" placeholder="회원가입시 등록한 이메일">
-            <button type="button" onclick="SendEmail()">인증</button>
-            <br/>
-        </div>
-        <div class="code" style="display:none;">
-            <label>인증코드</label> <span id="code_msg"></span> <br/>
-            <input name="emailCode" id="emailCode" placeholder="인증코드"> <br/>
-        </div>
-        <div>
-            <button type="button" onclick="isValid()">아이디 찾기</button>
+        <h1 class="title">아이디 찾기</h1>
+        <div class="find-id-container">
+            <div>
+                <label>이름</label>
+                <input class="common-input" name="name" id="name" placeholder="이름">
+            </div>
+            <div>
+                <label>이메일</label> <span id="email_msg"></span>
+                <span>
+                    <input class="common-input" name="email" id="email" placeholder="회원가입시 등록한 이메일">
+                    <button type="button" onclick="SendEmail()">인증</button>
+                </span>
+            </div>
+            <div class="code">
+                <label>인증코드</label> <span id="code_msg"></span>
+                <input class="common-input" name="emailCode" id="emailCode" placeholder="인증코드">
+            </div>
+            <button class="btn btn-secondary" type="button" onclick="isValid()">아이디 찾기</button>
         </div>
     </div>
 </main>
 
+<th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
 
 </body>
 </html>
