--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -25,61 +25,93 @@
 
 
 <main id="main" class="content-container-wrapper">
-    <h1 class="title">회원가입</h1>
-    <form name="joinform" action="/user/join" method="post">
-        <div>
-            <label>아이디</label><span th:text="${userid}" id="id_msg" class="msg"></span> <br/>
-            <input name="userid" id="userid" placeholder="아이디"/>
-            <button type="button" class="btn btn-secondary search_addr_btn" onclick="IdCheck()">중복확인</button>
-            <br/>
-        </div>
-        <div>
-            <label>비밀번호</label><span th:text="${password}" id="pw_msg" class="msg"></span> <br/>
-            <input name="password" type="password" oninput="Re_PwCheck()" placeholder="비밀번호"/> <br/>
-        </div>
-        <div>
-            <label>비밀번호확인</label><span th:text="${repassword}" id="re_pw_msg" class="msg"></span> <br/>
-            <input name="repassword" type="password" oninput="Re_PwCheck()" placeholder="비밀번호 확인"/> <br/>
-        </div>
-        <div>
-            <label>이름</label><span th:text="${name}" class="msg"></span> <br/>
-            <input name="name" placeholder="이름"/> <br/>
-        </div>
-        <div>
-            <label>이메일</label><span th:text="${email}" id="email_msg" class="msg"></span> <br/>
-            <input name="email" id="email" type="email" placeholder="이메일"/>
-            <button type="button" class="btn btn-secondary search_addr_btn" onclick="SendEmail()">인증</button>
-            <br/>
-        </div>
-        <div id="auth_code" style="display:none;">
-            <label>인증코드</label><span id="code_msg" class="msg"></span> <br/>
-            <input name="emailCode" id="code" placeholder="인증코드입력">
-            <button name="email_btn" class="btn btn-secondary search_addr_btn" type="button" onclick="ConfirmEmail()">
-                확인
-            </button>
-            <br/>
-        </div>
-        <div>
-            <label>전화번호</label><span th:text="${phone}" id="phone_msg" class="msg"></span> <br/>
-            <input name="phone" type="phone" placeholder="-제외한 전화번호"/><br/>
-        </div>
-        <div>
-            <label>우편번호</label><span th:text="${zipcode}" class="msg"></span> <br/>
-            <input name="zipcode" id="zipcode" placeholder="우편번호"/> <a href="javascript:AddressSearch()" class="btn btn-secondary search_addr_btn">우편번호
-            찾기</a> <br/>
-        </div>
-        <div>
-            <label>주소</label><span th:text="${addr1}" class="msg"></span> <br/>
-            <input name="addr1" id="addr1" placeholder="주소"/> <br/>
-        </div>
-        <div>
-            <label>상세주소</label> <br/>
-            <input name="addr2" id="addr2" placeholder="상세주소"/> <br/>
-        </div>
-        <div>
+    <div class="content-container">
+        <h1 class="title">회원가입</h1>
+        <form name="joinform" id="joinForm" action="/user/join" method="post">
+            <div>
+                <span>
+                    <label>아이디</label>
+                    <span th:text="${userid}" id="id_msg" class="msg"></span>
+                </span>
+                <span>
+                    <input class="big" name="userid" id="userid" placeholder="아이디"/>
+                    <button type="button" class="btn btn-secondary" onclick="IdCheck()">중복확인</button>
+                </span>
+            </div>
+            <div>
+                <span>
+                    <label>비밀번호</label>
+                    <span th:text="${password}" id="pw_msg" class="msg"></span>
+                </span>
+                <input name="password" type="password" oninput="Re_PwCheck()" placeholder="비밀번호"/>
+            </div>
+            <div>
+                <span>
+                    <label>비밀번호확인</label>
+                    <span th:text="${repassword}" id="re_pw_msg" class="msg"></span>
+                </span>
+                <input name="repassword" type="password" oninput="Re_PwCheck()" placeholder="비밀번호 확인"/> 
+            </div>
+            <div>
+                <span>
+                    <label>이름</label>
+                    <span th:text="${name}" class="msg"></span>
+                </span>
+                <input name="name" placeholder="이름"/> 
+            </div>
+            <div>
+                <span>
+                    <label>이메일</label>
+                    <span th:text="${email}" id="email_msg" class="msg"></span>
+                </span>
+                <span>
+                    <input class="big" name="email" id="email" type="email" placeholder="이메일"/>
+                    <button type="button" class="btn btn-secondary" onclick="SendEmail()">인증</button>
+                </span>
+            </div>
+            <div id="auth_code" style="display:none;">
+                <span>
+                    <label>인증코드</label>
+                    <span id="code_msg" class="msg"></span>
+                </span>
+                <span>
+                    <input name="emailCode" id="code" placeholder="인증코드입력">
+                    <button name="email_btn" class="btn btn-secondary" type="button" onclick="ConfirmEmail()">
+                    확인
+                    </button>
+                </span>
+            </div>
+            <div>
+                <span>
+                    <label>전화번호</label>
+                    <span th:text="${phone}" id="phone_msg" class="msg"></span>
+                </span>
+                <input name="phone" type="phone" placeholder="-제외한 전화번호"/>
+            </div>
+            <div>
+                <span>
+                    <label>우편번호</label>
+                    <span th:text="${zipcode}" class="msg"></span>
+                </span>
+                <span>
+                    <input class="big" name="zipcode" id="zipcode" placeholder="우편번호"/>
+                    <button onClick="AddressSearch()" class="btn btn-secondary">우편번호 찾기</button>
+                </span>
+            </div>
+            <div>
+                <span>
+                    <label>주소</label>
+                    <span th:text="${addr1}" class="msg"></span>
+                </span>
+                <input name="addr1" id="addr1" placeholder="주소"/> 
+            </div>
+            <div>
+                <label>상세주소</label> 
+                <input name="addr2" id="addr2" placeholder="상세주소"/> 
+            </div>
             <button class="btn btn-secondary search_addr_btn">가입요청</button>
-        </div>
-    </form>
+        </form>
+    </div>
 </main>
 
 <th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
