--- a/src/main/resources/templates/user/informationInfo.html
+++ b/src/main/resources/templates/user/informationInfo.html
@@ -47,82 +47,102 @@
                 </div>
                 <div class="information-info-container" th:switch="${function}">
                     <th:block th:case="read">
-                        <div class="sub-title-container">
-                            <h2 class="sub-title">회원정보 확인</h2>
-                        </div>
-                        <div class="info-content-container">
-                            <label>아이디</label> <span th:if="${provider} != null" style="color: gray">카카오로그인/구글로그인의 경우 아이디변경이 불가합니다.</span> <br/>
-                            <span th:text="${userid}"></span> <br/>
-                        </div>
-                        <div class="info-content-container">
-                            <label>이름</label> <br/>
-                            <span th:text="${name}"></span> <br/>
-                        </div>
-                        <div class="info-content-container">
-                            <label>이메일</label> <br/>
-                            <span th:text="${email}"></span> <br/>
-                        </div>
-                        <div class="info-content-container">
-                            <label>전화번호</label> <br/>
-                            <span th:text="${phone}"></span> <br/>
-                        </div>
-                        <div class="info-content-container">
-                            <label>우편번호</label> <br/>
-                            <span th:text="${zipcode}"></span> <br/>
-                        </div>
-                        <div class="info-content-container">
-                            <label>주소</label> <br/>
-                            <span th:text="${addr1}"></span> <br/>
-                            <span th:text="${addr2}"></span>
-                        </div>
+                        <table class="info-table">
+                            <tbody>
+                            <tr>
+                                <td>아이디</td>
+                                <td>
+                                    <span th:text="${userid}"></span>
+                                    <span th:if="${provider} != null"
+                                          style="color: gray">카카오로그인/구글로그인의 경우 아이디변경이 불가합니다.</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>이름</td>
+                                <td>
+                                    <span th:text="${name}"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>이메일</td>
+                                <td>
+                                    <span th:text="${email}"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>전화번호</td>
+                                <td>
+                                    <span th:text="${phone}"></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>주소</td>
+                                <td>
+                                    <p>(<span th:text="${zipcode}"></span>)&nbsp;<span
+                                            th:text="${addr1}"></span>&nbsp;<span th:text="${addr2}"></span></p>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </th:block>
                     <div class="info-auth-container" th:case="update" th:if="!${auth}">
-                        <div class="auth-title-container">
-                            <h2 class="sub-title">회원정보 수정</h2>
-                        </div>
-                        <span class="auth_msg" th:text="${auth_msg}"></span> <br/>
-                        <input name="password" type="password" class="password" placeholder="비밀번호 입력">
-                        <button onclick="userAuth()">확인</button> <br/>
+                        <span class="auth-msg" th:text="${auth_msg}"></span>
+                        <input class="common-input password" name="password" type="password" placeholder="비밀번호 입력">
+                        <button onclick="userAuth()">확인</button>
                     </div>
-                    <form name="updateinfo" action="/user/updateinfo" method="post">
-                        <div class="information-info-container" th:if="${auth}">
-                            <div class="sub-title-container">
-                                <h2 class="sub-title">회원정보 수정</h2>
+
+                    <form id="infoUpdateForm" name="updateinfo" action="/user/updateinfo" method="post">
+                        <div class="info-content-container" th:if="${provider} == null">
+                            <div>
+                                <label>아이디</label>
+                                <span id="id_msg" th:text="${userid_msg}"></span>
                             </div>
-                            <div class="info-content-container" th:if="${provider} == null">
-                                <label>아이디</label> <span id="id_msg" th:text="${userid_msg}"></span> <br/>
-                                <input name="userid" class="info" th:value="${userid}">
-                                <button type="button" onclick="IdCheck()">중복확인</button> <br/>
+                            <div>
+                                <input name="userid" class="big common-input" th:value="${userid}">
+                                <button type="button" onclick="IdCheck()">중복확인</button>
                             </div>
-                            <div class="info-content-container">
-                                <label>이름</label> <span id="name_msg" th:text="${name_msg}"></span> <br/>
-                                <input name="name" class="info" th:value="${name}"> <br/>
-                            </div>
-                            <div class="info-content-container">
-                                <label>이메일</label> <span id="email_msg" th:text="${email_msg}"></span> <br/>
-                                <input name="email" id="email" type="email" class="info" th:value="${email}"> <button type="button" onclick="SendEmail()">인증</button> <br/>
-                            </div>
-                            <div class="info-content-container" id="auth_code" style="display: none;">
-                                <label>인증코드</label> <span id="code_msg"></span> <br/>
-                                <input id="code" class="info"> <button type="button" onclick="ConfirmEmail()">확인</button> <br/>
-                            </div>
-                            <div class="info-content-container">
-                                <label>전화번호</label> <span id="phone_msg" th:text="${phone_msg}"></span> <br/>
-                                <input name="phone" class="info" th:value="${phone}"> <br/>
-                            </div>
-                            <div class="info-content-container">
-                                <label>우편번호</label> <span id="zipcode_msg" th:text="${zipcode_msg}"></span> <br/>
-                                <input name="zipcode" id="zipcode" class="info" th:value="${zipcode}"> <button onclick="AddressSearch()" type="button">우편번호 찾기</button> <br/>
-                            </div>
-                            <div class="info-content-container">
-                                <label>주소</label> <span id="addr1_msg" th:text="${addr1_msg}"></span> <br/>
-                                <input name="addr1" id="addr1" class="info" th:value="${addr1}"> <br/>
-                                <input name="addr2" id="addr2" class="info" th:value="${addr2}">
-                            </div>
-                            <button>수정</button>
-                            <input name="password" type="hidden" value=".">
-                            <input name="repassword" type="hidden" value=".">
                         </div>
+                        <div class="info-content-container">
+                            <div>
+                                <label>이름</label>
+                                <span id="name_msg" th:text="${name_msg}"></span>
+                            </div>
+                            <input name="name" class="common-input" th:value="${name}"> <br/>
+                        </div>
+                        <div class="info-content-container">
+                            <div>
+                                <label>이메일</label>
+                                <span id="email_msg" th:text="${email_msg}"></span>
+                            </div>
+                            <div>
+                                <input name="email" id="email" type="email" class="info" th:value="${email}">
+                                <button type="button" onclick="SendEmail()">인증</button>
+                            </div>
+                        </div>
+                        <div class="info-content-container" id="auth_code" style="display: none;">
+                            <label>인증코드</label> <span id="code_msg"></span> <br/>
+                            <input id="code" class="info">
+                            <button type="button" onclick="ConfirmEmail()">확인</button>
+                            <br/>
+                        </div>
+                        <div class="info-content-container">
+                            <label>전화번호</label> <span id="phone_msg" th:text="${phone_msg}"></span> <br/>
+                            <input name="phone" class="info" th:value="${phone}"> <br/>
+                        </div>
+                        <div class="info-content-container">
+                            <label>우편번호</label> <span id="zipcode_msg" th:text="${zipcode_msg}"></span> <br/>
+                            <input name="zipcode" id="zipcode" class="info" th:value="${zipcode}">
+                            <button onclick="AddressSearch()" type="button">우편번호 찾기</button>
+                            <br/>
+                        </div>
+                        <div class="info-content-container">
+                            <label>주소</label> <span id="addr1_msg" th:text="${addr1_msg}"></span> <br/>
+                            <input name="addr1" id="addr1" class="info" th:value="${addr1}"> <br/>
+                            <input name="addr2" id="addr2" class="info" th:value="${addr2}">
+                        </div>
+                        <button>수정</button>
+                        <input name="password" type="hidden" value=".">
+                        <input name="repassword" type="hidden" value=".">
                     </form>
                     <div class="delete-info-container" th:case="delete">
                         <form class="deleteinfo" action="/user/deleteinfo" method="post">
@@ -154,7 +174,9 @@
 <th:block th:insert="~{fragments/footer.html :: footer_fragment}"></th:block>
 
 <!-- axios -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"
+        integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- map -->
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
