--- a/src/main/resources/static/css/user/myinfo.css
+++ b/src/main/resources/static/css/user/myinfo.css
@@ -142,6 +142,11 @@
     margin: 0 auto;
 }
 
+#infoUpdateForm button {
+    margin-left: 15px;
+    width: 120px;
+}
+
 #infoUpdateForm .info-content-container {
     width: 100%;
     display: flex;
