--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -75,7 +75,7 @@
                     <span id="code_msg" class="msg"></span>
                 </span>
                 <span>
-                    <input class="form-control" name="emailCode" id="code" placeholder="인증코드입력">
+                    <input class="big form-control" name="emailCode" id="code" placeholder="인증코드입력">
                     <button name="email_btn" class="btn btn-secondary" type="button" onclick="ConfirmEmail()">
                     확인
                     </button>
@@ -95,7 +95,7 @@
                 </span>
                 <span>
                     <input class="big form-control" name="zipcode" id="zipcode" placeholder="우편번호"/>
-                    <button onClick="AddressSearch()" class="btn btn-secondary">우편번호 찾기</button>
+                    <button type="button" onClick="AddressSearch()" class="btn btn-secondary">우편번호 찾기</button>
                 </span>
             </div>
             <div>
