--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,7 @@
             </div>
             <div class="hotel-area">
                 <a class="link" href="/hotel/find">호텔 찾기</a>
-                <a class="link" href="/hotelInfo/info">호텔 소개</a>
+                <a class="link" href="info">호텔 소개</a>
                 <a class="link" href="/board/question" sec:authorize="hasRole('ROLE_USER') || isAnonymous()">고객 문의</a>
             </div>
         </div>
