--- a/src/main/resources/templates/hotelInfo/award.html
+++ b/src/main/resources/templates/hotelInfo/award.html
@@ -29,9 +29,9 @@
                 </div>
                 <div class="menu">
                     <div class="link-container">
-                        <a href="/hotelInfo/info" class="link">소개</a>
-                        <a href="/hotelInfo/history" class="link">연혁</a>
-                        <a href="/hotelInfo/award" class="link">수상 이력</a>
+                        <a href="info" class="link">소개</a>
+                        <a href="history" class="link">연혁</a>
+                        <a href="award" class="link">수상 이력</a>
                     </div>
                 </div>
             </div>
